test/spec_vectors/local_set/fail/module_14.wat
(module (func $type-param-arg-empty-vs-num-in-br (param i32) (i32.const 0) (block (br 0 (local.set 0)))))